add 2010-03-30 snapshot